tests/baselines/reference/callConstructorsES6_05.errors.txt
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_05.ts(3,5): error TS9003: Callable classes are not currently supported.
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_05.ts(4,5): error TS9003: Callable classes are not currently supported.
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_05.ts(5,5): error TS9003: Callable classes are not currently supported.
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_05.ts(15,10): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_05.ts(16,10): error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_05.ts(17,11): error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?


==== tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_05.ts (6 errors) ====
    
    const C = class C {
        call constructor(): C;
        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9003: Callable classes are not currently supported.
        call constructor(x: number): C
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9003: Callable classes are not currently supported.
        call constructor(x?: number): any {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            if (x !== undefined) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                return x;
    ~~~~~~~~~~~~~~~~~~~~~
            }
    ~~~~~~~~~
            
    ~~~~~~~~
            let result = new C(10);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            return result;
    ~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS9003: Callable classes are not currently supported.
    };
    
    let c1 = new C(10);
             ~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    let c2 = C();
             ~~~
!!! error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?
    let num = C(100);
              ~~~~~~
!!! error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?